<resources>
    <string name="app_name">OPFPControl</string>

    <string name="tint">Icon Tint Normal</string>
    <string name="tint_disabled">Icon Tint Disabled</string>
    <string name="icon">Icon Image Normal</string>
    <string name="icon_disabled">Icon Image Disabled</string>
    <string name="play_anim">Show Animation</string>
    <string name="icon_opacity_normal">Icon Opacity Normal</string>
    <string name="icon_opacity_disabled">Icon Opacity Disabled</string>

    <string name="apply">Apply</string>
    <string name="reboot">Reboot</string>
    <string name="later">Later</string>
    <string name="root">Root</string>
    <string name="rebooting">Rebooting…</string>
    <string name="magisk_module_installed">Magisk Module Installed!</string>

    <string name="reboot_first_desc">A reboot is required to activate the overlay. Would you like to reboot now or later?</string>
    <string name="reboot_others_desc">It\'s strongly recommended that you reboot after applying new settings. Would you like to reboot now?</string>
    <string name="reboot_uninstall_desc">A reboot is required to complete the removal process. Would you like to reboot now?</string>
    <string name="reboot_first_again_desc">One more reboot is needed to activate the overlay. Tap this notification to reboot.</string>
    <string name="waiting_for_root">Waiting for root…</string>
    <string name="root_not_detected">Root not detected</string>
    <string name="magisk_module_installed_desc">Please reboot to finish the installation.</string>
</resources>
